// syntax = "proto3";

// package pb;

// option go_package = "./";

// service ChatService{
//     rpc GetFriendChat (GetFriendChatRequest) returns (GetFriendChatResponse){}
//   }
  
//   message GetFriendChatRequest {
//     string userId = 1;
//     string friendId = 2;
//     string offset = 3;
//     string limit = 4;
// }

// message Message {
//     string messageId = 1;
//     string senderId = 2;
//     string recipientId = 3;
//     string content = 4;
//     string timestamp = 5;
// }

// message GetFriendChatResponse {
//     repeated Message friendChat = 1;
// }

syntax = "proto3";

package pb;

option go_package = "./";

service ChatService {
    rpc Connect (stream Message) returns (stream Message);
    rpc FetchHistory(ChatID) returns (ChatHistory);
}

message Message {
    string Chat_ID = 1;
    string User_ID = 2;
    string Receiver_ID = 3;
    string Content = 4; 
    string timestamp = 5;
}

message ChatID {
    string User_ID = 1;
    string Receiver_ID = 2;
}

message ChatHistory {
    repeated Message Chats = 1;
}